--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
 			<img src="img/orlyanskaya.jpg" alt="" width="160" align="top">Анна Орлянская
 			<img src="img/rostkova.jpg" alt="" width="160" align="top">Мария Росткова
 			<img src="img/aleks.jpg" alt="" width="160" align="top">Александр Мышляев
-			<img src="img/evgen.jpg" alt="" width="160" align="top">Евгений Леонов <a href="kalich.html" style="color:white" target="_blank">                                                                          #</a>
+			<img src="img/evgen.jpg" alt="" width="160" align="top">Евгений Леонов <a href="kalich.html" style="color:white" target="_blank">                                                                          <p>123</p>#</a>
 			<img src="img/kolya.jpg" alt="" width="160" align="top">Николай Чёчин
 			<img src="img/sasha.jpg" alt="" width="160" align="top">Александра Молочкова
 			<img src="img/kashmar.jpg" alt="" width="160" align="top">Саша Кушмурадов
