--- a/kalich.html
+++ b/kalich.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<img src="kalich.jpg" alt="" class="css-adaptive">
- <a href="">#</a>
+ <a href="anya.jpg">#</a>
 </body>
 </html>
