--- a/kalich.html
+++ b/kalich.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	<img src="kalich.jpg" alt="" class="css-adaptive">
- <a href="anya.jpg">#</a>
+	<center>
+		<a href="anya.jpg">#</a>
+	</center>
+ 
 </body>
 </html>
