--- a/kalich.html
+++ b/kalich.html
@@ -5,10 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<img src="kalich.jpg" alt="" class="css-adaptive">
-	<center>
-		<a href="anya.jpg">#</a>
-	</center>
- 
+ <div style="background-image:url('kalich.jpg'); width: 100px; height: 100px">
+    <div style="position: relative; top: 10px; left: 30px">ОЛОЛО</div>
+</div>
 </body>
 </html>
