--- a/kalich.html
+++ b/kalich.html
@@ -5,8 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
- <div style="background-image:url('kalich.jpg'); width: 100px; height: 100px">
-    <div style="position: relative; top: 10px; left: 30px">ОЛОЛО</div>
+ <div style="background-image:url('kalich.jpg'); width: auto; height:1000px">
+    <div style="position: relative; top: 250px; left: 290px"><span style="color:black"><a href="anya.jpg">$</a></span></div>
 </div>
 </body>
 </html>
