--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<h1 class="text">Экспериментальный театр-студия</h1>
 		<h1 class="texttwo">"D.E.M.I."</h1>
 		<img src="img/photo.jpg" alt="" class="oleg">
-		<p align="right">Сцена-это место <br>встречи человека <br>с самим собой</p>
+		<p align="right">"Сцена-это место <br>встречи человека <br>с самим собой"</p>
 	</div>
 </header>
 
